gccida/g3/output_format
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_format/src/diagnostic.c:1088:22: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
void  output_format( output_buffer_0 *buffer) 
                     ^~~~~~~~~~~~~~~
                     output_buffer
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_format/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_format/src/diagnostic.c:1241:24: error: use of undeclared identifier 'off_6B644F'
sprintf( digit_buffer, off_6B644F, *v42); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_format/src/diagnostic.c:1256:40: error: use of undeclared identifier 'off_6B6453'
sprintf( digit_buffer, ( const char *)&off_6B6453, *v51); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_format/src/diagnostic.c:1287:24: error: use of undeclared identifier 'off_6B86B9'
sprintf( digit_buffer, off_6B86B9, *v48); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_format/src/diagnostic.c:1302:40: error: use of undeclared identifier 'off_6B8AA4'
sprintf( digit_buffer, ( const char *)&off_6B8AA4, *v45); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_format/src/diagnostic.c:1423:25: error: use of undeclared identifier 'off_698152'
sprintf( digit_buffer, &off_698152[1], *v11); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_format/src/diagnostic.c:1455:25: error: use of undeclared identifier 'off_6B8A7E'
sprintf( digit_buffer, &off_6B8A7E[1], *v30); 
                        ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_format/src/obj/diagnostic.o] Error 1
